初步完成项目搭建，尝试运行